--- a/app/templates/foursquare_login.html
+++ b/app/templates/foursquare_login.html
@@ -1,8 +1,2 @@
-<html>
-    <head>
-        <title>{{ message|e }}</title>
-    </head>
-    <body>
-        <h1>{{ message|e }}</h1>
-    </body>
-</html>
+<a href="{{ message|e }}">{{ message|e }}</a>
+
